fix : alignment issue - announcement block

--- a/hlx_statics/blocks/announcement/announcement.css
+++ b/hlx_statics/blocks/announcement/announcement.css
@@ -15,6 +15,7 @@ main div.announcement-wrapper div.announcement.block {
 
 main div.announcement-wrapper div.announcement > div {
   height: 100%;
+  text-align: center;
 }
 
 main div.announcement-wrapper div.announcement.background-color-gray{
